--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.0",
     "faker": "^4.1.0",
+    "heroku": "^7.36.3",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
