--- a/package.json
+++ b/package.json
@@ -31,5 +31,7 @@
     "passport-local-mongoose": "^5.0.1",
     "serve-favicon": "^2.5.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "dotenv": "^8.2.0"
+  }
 }
