--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "showdown": "^1.9.1"
   },
   "devDependencies": {}
 }
