--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.8.0",
     "@sendgrid/mail": "^6.4.0",
+    "@turf/bbox-polygon": "^6.0.1",
+    "@turf/turf": "^5.1.6",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.16.0",
     "cookie-parser": "~1.4.4",
