--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@turf/turf": "^5.1.6",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.16.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
